# zero22prod

./: Cargo.toml
.cargo/: config.toml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/.github/workflows/: general.yml
src/routes/: health_check.rs  subscriptions.rs
